# motherdimas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  motherdimas_client.cpp
src/display/: display.cpp  display.hpp
src/input/: input.hpp
src/interactions/: interactions.cpp  interactions.hpp
src/sound/: sound.cpp  sound.hpp
src/utils/: msglog.cpp  msglog.hpp
